--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,3 +296,32 @@
   height: 3rem;
   color: #e67e22;
 }
+
+/* ========TESTEMONIAL SECTION======== */
+
+.section-testemonials {
+  padding: 9.6rem 0;
+}
+
+.testemonials {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4.8rem;
+}
+
+.testemonial-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+
+.testemonial-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+
+.testemonial-name {
+  font-size: 1.6rem;
+  color: #777;
+}
