--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -186,6 +186,25 @@ body {
   border-bottom: 1px solid transparent;
 }
 
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  list-style-type: none;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  font-size: 1.8rem;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
 /* ========HELPER CLASSES======== */
 .margin-right-sm {
   margin-right: 1.6rem !important;
