--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -6,8 +6,8 @@
 
 - Font weights
 Default: 400
-Medium: 500 
-Semi-Bold: 600
+Medium: 500
+Semi-bold: 600
 Bold: 700
 
 - Line heights
@@ -17,24 +17,33 @@ Medium: 1.2
 Paragraph default: 1.6
 
 - Letter spacing
--0.75
+-0.5px
 0.75px
 
 --- 02 COLORS
 
 - Primary: #e67e22
-- Tints: 
+- Tints:
 #fdf2e9
 #fae5d3
+#eb984e
 
-- Shades: #cf711f
+- Shades: 
+#cf711f
+#45260a
+
 - Accents:
-- Greys:
+- Greys
+
+#888
+#767676 (lightest grey allowed on #fff)
 #6f6f6f (lightest grey allowed on #fdf2e9)
 #555
 #333
 
 --- 05 SHADOWS
+
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 06 BORDER-RADIUS
 
@@ -44,7 +53,7 @@ Medium: 11px
 --- 07 WHITESPACE
 
 - Spacing system (px)
-2 / 4 /8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
 
 * {
@@ -55,8 +64,8 @@ Medium: 11px
 
 html {
   /* font-size: 10px; */
-  /* 10px / 16px = 0.625 = 62.5%*/
-  /* Percentage of user's browser font-siize settings*/
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
 }
 
@@ -66,7 +75,10 @@ body {
   font-weight: 400;
   color: #555;
 }
-/* ========GENERAL REUSABLE COMPONENTS======== */
+
+/**************************/
+/* GENRAL REUSABLE COMPONENTS */
+/**************************/
 
 .container {
   /* 1140px */
@@ -79,6 +91,7 @@ body {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+
   /* margin-bottom: 9.6rem; */
 }
 
@@ -102,6 +115,10 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .grid--center-v {
   align-items: center;
 }
@@ -111,8 +128,11 @@ body {
 .heading-tertiary {
   font-weight: 700;
   color: #333;
+  /* color: #45260a; */
+  /* color: #343a40; */
   letter-spacing: -0.5px;
 }
+
 .heading-primary {
   font-size: 5.2rem;
   line-height: 1.05;
@@ -141,14 +161,24 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
+
   text-decoration: none;
   font-size: 2rem;
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+
+  /* Put transition on original "state" */
+  /* transition: background-color 0.3s; */
   transition: all 0.3s;
 }
 
@@ -179,6 +209,18 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
 .link:link,
 .link:visited {
   display: inline-block;
@@ -196,17 +238,17 @@ body {
 }
 
 .list {
+  list-style: none;
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
-  list-style-type: none;
 }
 
 .list-item {
+  font-size: 1.8rem;
   display: flex;
   align-items: center;
   gap: 1.6rem;
-  font-size: 1.8rem;
 }
 
 .list-icon {
@@ -214,7 +256,8 @@ body {
   height: 3rem;
   color: #e67e22;
 }
-/* ========HELPER CLASSES======== */
+
+/* HELPER/SETTINGS CLASSES */
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
@@ -226,6 +269,7 @@ body {
 .center-text {
   text-align: center;
 }
+
 strong {
   font-weight: 500;
 }
