Building the Mobile Navigation

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -85,6 +85,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -92,6 +93,8 @@ body {
   line-height: 1;
   font-weight: 400;
   color: var(--gray-4);
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 /**************************/
