--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-@import "./general.css";
-@import "./header.css";
-@import "./navigation.css";
-@import "./hero.css";
-@import "./featured.css";
-@import "./how-it-works.css";
-@import "./meals.css";
-@import "./testemonial.css";
-@import "./pricing.css";
-@import "./cta.css";
-@import "./footer.css";
+@import "/assets/css/general.css";
+@import "/assets/css/header.css";
+@import "/assets/css/navigation.css";
+@import "/assets/css/hero.css";
+@import "/assets/css/featured.css";
+@import "/assets/css/how-it-works.css";
+@import "/assets/css/meals.css";
+@import "/assets/css/testemonial.css";
+@import "/assets/css/pricing.css";
+@import "/assets/css/cta.css";
+@import "/assets/css/footer.css";
