Making the code cleaner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-@import "/assets/css/general.css";
-@import "/assets/css/header.css";
-@import "/assets/css/navigation.css";
-@import "/assets/css/hero.css";
-@import "/assets/css/featured.css";
-@import "/assets/css/how-it-works.css";
-@import "/assets/css/meals.css";
-@import "/assets/css/testemonial.css";
-@import "/assets/css/pricing.css";
-@import "/assets/css/cta.css";
-@import "/assets/css/footer.css";
+@import "../css/general.css";
+@import "../css/header.css";
+@import "../css/navigation.css";
+@import "../css/hero.css";
+@import "../css/featured.css";
+@import "../css/how-it-works.css";
+@import "../css/meals.css";
+@import "../css/testemonial.css";
+@import "../css/pricing.css";
+@import "../css/cta.css";
+@import "../css/footer.css";
